Modified author on all related files.

--- a/FunciSNP/inst/doc/FunciSNP_vignette.Rnw
+++ b/FunciSNP/inst/doc/FunciSNP_vignette.Rnw
@@ -616,7 +616,7 @@ GWAS hits.}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Questions or comments, please contact Simon G. Coetzee (scoetzee NEAR gmail 
- POINT com) or Houtan Noushmehr (houtana NEAR gmail POINT com).
+ POINT com) or Houtan Noushmehr, PhD (houtana NEAR gmail POINT com).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
