--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-## Houtan Noushmehr
+## Houtan Noushmehr, PhD
 September 27, 2011
 This project contains all the current working in house scripts for the Coetzee Lab.
 
