--- a/FunciSNP/inst/doc/FunciSNP_vignette.tex
+++ b/FunciSNP/inst/doc/FunciSNP_vignette.tex
@@ -948,7 +948,7 @@ GWAS hits.}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Questions or comments, please contact Simon G. Coetzee (scoetzee NEAR gmail 
- POINT com) or Houtan Noushmehr (houtana NEAR gmail POINT com).
+ POINT com) or Houtan Noushmehr, PhD (houtana NEAR gmail POINT com).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
