--- a/FunciSNP/inst/doc/FunciSNP_vignette.tex
+++ b/FunciSNP/inst/doc/FunciSNP_vignette.tex
@@ -25,15 +25,13 @@
         Noushmehr$^\ddagger$\footnote{houtana NEAR gmail POINT com}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-
 \title{Using the FunciSNP package\\`Functional Identification of SNPs with\\
 Phenotype by Coincidence with Chromatin Biofeatures'}
 \maketitle
 %%% Affiliation %%%
 \begin{center}
-$^\ddagger$Norris Cancer Center\\Keck School of
-Medicine\\University of Southern California\\Los Angeles, CA,
-USA
+$^\ddagger$Norris Cancer Center\\Keck School of Medicine\\University of Southern
+California\\Los Angeles, CA, USA
 \end{center}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tableofcontents
@@ -43,17 +41,19 @@ USA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-FunciSNP assist in identifying putative functional SNP from previously
-identified GWAS SNPs (tagSNP). Using information from the 1000 genomes database
-(1000GP) as well as known position of GWAS tagSNP currated for a particular
-trait or disease, FunciSNP integrates the two data along with sequence
-information provided by peaks identified from high-throughput sequencing.
-FunciSNP assumes user will provide peaks identified using any available ChIP
-peak algorithm, such as FindPeaks.
+\Rpackage{FunciSNP} assist in identifying putative functional SNP in LD to
+previously annotated GWAS SNPs (tagSNP). Extracting information from the 1000
+genomes database (1000GP) by relative genomic position of GWAS tagSNP currated
+for a particular trait or disease, FunciSNP aims to integrate the two
+information with sequence information provided by peaks identified from
+high-throughput sequencing. FunciSNP assumes user will provide peaks identified
+using any available ChIP peak algorithm, such as FindPeaks, HOMER, or SICER.
+\Rpackage{FunciSNP} will currate all 1000GP SNPs which are in linkage
+disequilibrium (LD) to a known disease associated tagSNP and more importantly
+determine if the 1000GP SNP in LD to the tagSNP overlaps a genomic biological
+feature.
 
-It will identify correlated SNPs which are in linkage disequilibrium (LD) to a
-known disease associated tagSNP. It will also determine if the correlated SNP in
-LD to the tagSNP overlaps a genomic biological feature. Correlated SNPs are
+Correlated SNPs are
 directly imported from the current public release of the 1000 genomes database.
 1000 genomes ftp servers available for the 1000 genomes public data: 
 
@@ -279,21 +279,19 @@ session. NOTE: The main method to run FunciSNP is \Rmethod{getFSNPs}.
 \begin{Schunk}
 \begin{Sinput}
 > ## FunciSNP analysis, extracts correlated SNPs from the 
-> #  1000 genomes db ("ncbi" or "ebi") and finds overlaps between 
-> #  correlated SNP and biological features and then 
-> #  calculates LD (Rsquare, Dprime, distance, p-value).
+> ## 1000 genomes db ("ncbi" or "ebi") and finds overlaps between 
+> ## correlated SNP and biological features and then 
+> ## calculates LD (Rsquare, Dprime, distance, p-value).
 > ## Depending on number of CPUs and internet connection, this step may take 
-> # some time. Please consider using a unix machine to access multiple cores.
-> # glioma <- getFSNPs(snp.regions.file=glioma.snp, 
-> #           bio.features.loc = glioma.bio, 
-> #           bio.features.TSS=FALSE);
-> # glioma;
-> # summary(glioma);
+> ## some time. Please consider using a unix machine to access multiple cores.
+> 
+> # glioma <- getFSNPs(snp.regions.file=glioma.snp, bio.features.loc = glioma.bio,
+> # bio.features.TSS=FALSE);
 \end{Sinput}
 \end{Schunk}
 
 As an alternative, \Robject{glioma} was pre-run and stored in the package as an
-R object. To call this data object, simily run the following commands. 
+\textit{R} object. To call this data object, simily run the following commands. 
 
 \begin{Schunk}
 \begin{Sinput}
@@ -423,7 +421,26 @@ sections for more details). The following step will output the data.frame.
 [1] 862  28
 \end{Soutput}
 \begin{Sinput}
-> head(gl.anno[,c(1:18,20:28)]); ## 
+> names(gl.anno);
+\end{Sinput}
+\begin{Soutput}
+ [1] "chromosome"                        "bio.feature.start"                
+ [3] "bio.feature.end"                   "bio.feature"                      
+ [5] "corr.snp.id"                       "corr.snp.position"                
+ [7] "tag.snp.id"                        "tag.snp.position"                 
+ [9] "D.prime"                           "R.squared"                        
+[11] "p.value"                           "distance.from.tag"                
+[13] "population.count"                  "population"                       
+[15] "nearest.lincRNA.ID"                "nearest.lincRNA.distancetoFeature"
+[17] "nearest.lincRNA.coverage"          "nearest.TSS.GeneSymbol"           
+[19] "nearest.TSS.refseq"                "nearest.TSS.ensembl"              
+[21] "nearest.TSS.coverage"              "nearest.TSS.distancetoFeature"    
+[23] "Promoter"                          "utr5"                             
+[25] "Exon"                              "Intron"                           
+[27] "utr3"                              "Intergenic"                       
+\end{Soutput}
+\begin{Sinput}
+> head(gl.anno[, c(1:18,20:28)]);
 \end{Sinput}
 \begin{Soutput}
   chromosome bio.feature.start bio.feature.end        bio.feature  corr.snp.id
@@ -470,26 +487,7 @@ sections for more details). The following step will output the data.frame.
 6                          -677      YES   NO   NO     NO   NO         NO
 \end{Soutput}
 \begin{Sinput}
-> names(gl.anno);
-\end{Sinput}
-\begin{Soutput}
- [1] "chromosome"                        "bio.feature.start"                
- [3] "bio.feature.end"                   "bio.feature"                      
- [5] "corr.snp.id"                       "corr.snp.position"                
- [7] "tag.snp.id"                        "tag.snp.position"                 
- [9] "D.prime"                           "R.squared"                        
-[11] "p.value"                           "distance.from.tag"                
-[13] "population.count"                  "population"                       
-[15] "nearest.lincRNA.ID"                "nearest.lincRNA.distancetoFeature"
-[17] "nearest.lincRNA.coverage"          "nearest.TSS.GeneSymbol"           
-[19] "nearest.TSS.refseq"                "nearest.TSS.ensembl"              
-[21] "nearest.TSS.coverage"              "nearest.TSS.distancetoFeature"    
-[23] "Promoter"                          "utr5"                             
-[25] "Exon"                              "Intron"                           
-[27] "utr3"                              "Intergenic"                       
-\end{Soutput}
-\begin{Sinput}
-> summary(gl.anno[,c(1:18,20:28)]);
+> summary(gl.anno[, c(1:18,20:28)]);
 \end{Sinput}
 \begin{Soutput}
   chromosome        bio.feature.start   bio.feature.end    
@@ -778,8 +776,8 @@ contains the most number of 1000GP SNPs, run the following.
 > dev.off()
 \end{Sinput}
 \begin{Soutput}
-pdf 
-  2 
+X11cairo 
+       2 
 \end{Soutput}
 \end{Schunk}
 
@@ -867,8 +865,8 @@ enrichment for genomic features.
 > dev.off()                                                                        
 \end{Sinput}
 \begin{Soutput}
-pdf 
-  2 
+X11cairo 
+       2 
 \end{Soutput}
 \end{Schunk}
                                                                                  
@@ -914,10 +912,10 @@ UCSC Genome Browser FAQ (\url{http://genome.ucsc.edu/FAQ/FAQformat}).
 \begin{Schunk}
 \begin{Sinput}
 > ## will output to current working directory.
-> FunciSNPbed(glioma.anno, rsq=0.5);
+> FunciSNPbed(glioma.anno, rsq=0.22);
 \end{Sinput}
 \begin{Soutput}
-Total corSNP (RED):  44 
+Total corSNP (RED):  57 
 Total tagSNP (BLK):  3 
 \end{Soutput}
 \begin{Sinput}
@@ -931,11 +929,12 @@ initial position is provided by the first tagSNP and the first linked
 Func-y-SNP. We recommend using UCSC genome browser to view your BED files. This
 is useful so you can view all public and private tracks in relation to FunciSNP
 results. As an example, see Figure \ref{fig:FunciSNP_genome_viewer1.pdf} on page
-\pageref{fig:FunciSNP_genome_viewer1.pdf}.
+\pageref{fig:FunciSNP_genome_viewer1.pdf} or visit this saved UCSC Genome
+Browser session: \url{http://goo.gl/xrZPD}.
 
 \begin{figure}[ht!]                                                              
 \begin{center}                                                                   
-\includegraphics{UCSC_genomeviewer_glioma.png}                                    
+\includegraphics{UCSC_genomeviewer_glioma.pdf}                                    
 \caption{\label{fig:FunciSNP_genome_viewer1.pdf} FunciSNP results viewed in UCSC
 genome browser. Top track represents FunciSNP results, second track is the known
 GWAS hits.}        
